--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The future is data-driven</title>
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,6 +13,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
@@ -22,7 +26,7 @@
         </div>
         <div class="hero-content">
             <h1 data-aos="zoom-in" data-aos-once="true">Let <span class="special">data</span> lead the way.</h1>
-            <a href="#" class="btn-outline">Login</a>
+            <a href="https://lookerstudio.google.com/reporting/31f15a3b-b451-4259-b9ac-331817633d40/page/prmDD" class="btn-outline">Login</a>
         </div>
     </div>
     <div id="sectionOne">
@@ -99,13 +103,13 @@
         <div class="left">
             <h2>LEVERAGE THE POWER OF CUTTING EDGE TECHNOLOGY <span>TODAY.</span></h2>
             <p>Book a free consultation.</p>
-            <a href="mailto:elevate.web@gmail.com" class="btn-main">Email</a>
+            <a href="mailto:elevate.web.lk@gmail.com" class="btn-main">Email</a>
         </div>
         <div class="right">
             <h5>PHONE</h5>
             <a href="tel:+94773906148">0773906148</a>
             <h5>EMAIL</h5>
-            <p>elevate.web@gmail.com</p>
+            <p>elevate.web.lk@gmail.com</p>
         </div>
     </div>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
